--- a/StudentInfoWebApi/StudentInfoWebApi.csproj
+++ b/StudentInfoWebApi/StudentInfoWebApi.csproj
@@ -19883,6 +19883,7 @@
     <Content Include="inline.bundle.js.map" />
     <Content Include="main.bundle.js.map" />
     <Content Include="polyfills.bundle.js.map" />
+    <Content Include="package.json" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="main.bundle.js" />
     <Content Include="polyfills.bundle.js" />
